--- a/src/pages/UserPage/UserPage.module.css
+++ b/src/pages/UserPage/UserPage.module.css
@@ -20,20 +20,24 @@
     width: 394px;
   }
 }
+
 .userProfileInfo {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
+
 .userProfile {
   display: flex;
   flex-direction: column;
   gap: 64px;
+  margin-bottom: 64px;
 }
 
 @media screen and (min-width: 768px) {
   .userProfile {
     gap: 80px;
+    margin-bottom: 100px;
   }
 }
 
@@ -41,6 +45,7 @@
   .userProfile {
     flex-direction: row;
     gap: 40px;
+    margin-bottom: 120px;
   }
 }
 
@@ -83,6 +88,7 @@
     width: 768px;
   }
 }
+
 @media screen and (min-width: 1440px) {
   .container {
     padding: 0;
@@ -103,6 +109,7 @@
     margin: 0 auto;
   }
 }
+
 .tabsContainer {
   width: 100%;
 }
